[package]
name = "contract"
version = "0.1.0"
authors = ["Luka Ilic <luka.ilic@mef.edu.rs>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.5.2"
cosmwasm-std = "1.5.2"
cw-storage-plus = "1.2.0"
schemars = "=0.6.0"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"

[dev-dependencies]
cosmwasm-vm = "1.5.2"
cw-multi-test = "0.20.0"
